[metadata]
name = giterop
# version= 0.1a1
description = maintains git-based spec of your OpenShift cluster
description-file = README.md
description-content-type = text/markdown
author = Adam Souzis
author_email = adam@onecommons.org
home-page = https://github.com/onecommons/giterop
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
# keywords =

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1

[pbr]
# skip automatic generation of MANIFEST.in
skip_git_sdist = True

[entry_points]
console_scripts =
    giterop = giterop.__main__:main
toscaparser.extensions =
    tosca_simple_giterop_1_0_0 = giterop.tosca_plugins:plugindef_1_0_0
