[metadata]
name = unfurl
# version= 0.1a1
summary = use Git to record and deploy changes to your DevOps infrastructure
description-file = README.md
description-content-type = text/markdown
author = Adam Souzis
author_email = adam@onecommons.org
home-page = https://github.com/onecommons/unfurl
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
# keywords =

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support.
universal=1

[pbr]
# skip automatic generation of MANIFEST.in
skip_git_sdist = True
skip_authors = True
skip_changelog = True

[entry_points]
console_scripts =
    unfurl = unfurl.__main__:main
    unfurl-vault-client = unfurl.__main__:vaultclient
toscaparser.extensions =
    tosca_simple_unfurl_1_0_0 = unfurl.tosca_plugins:plugindef_1_0_0
