[project]
name = "tosca"
version = "0.0.8"
requires-python = ">=3.7"
authors = [
  { name="Adam Souzis", email="adam@onecommons.org" },
]
description = "A library for representing TOSCA (Topology and Orchestration Specification for Cloud Applications) in Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "black>=24.3.0",
  "typing_extensions>=4.7.1",
  "RestrictedPython>=7.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"tosca.vendor.toscaparser.elements" = ["*.yaml"]

[project.urls]
Homepage = "https://www.unfurl.cloud"
Documentation = "https://github.com/onecommons/unfurl/blob/main/tosca-package/README.md"
Repository = "https://github.com/onecommons/unfurl/tree/main/tosca-package"
