[project]
name = "tosca"
version = "0.1.0"
requires-python = ">=3.8"
authors = [
  { name="Adam Souzis", email="adam@onecommons.org" },
]
description = "A library for representing TOSCA (Topology and Orchestration Specification for Cloud Applications) in Python"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
  "black>=24.3.0",
  "typing_extensions>=4.7.1",
  "RestrictedPython>=7.4",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"tosca.vendor.toscaparser.elements" = ["*.yaml"]

[project.urls]
Homepage = "https://www.unfurl.cloud"
Documentation = "https://docs.unfurl.run/dsl.html"
Repository = "https://github.com/onecommons/unfurl/tree/main/tosca-package"
Changelog = "https://github.com/onecommons/unfurl/blob/main/CHANGELOG.md"
